--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 
             </section>
             <div id="cart">
-                <img src="media/photo_2024-05-20_13-52-10.jpg" width="64px">
+                <img src="images/cart.png" width="64px">
             </div>
         </main>
     </body>
